# grading-cloud

./: .cursorrules  .dockerignore  .gitignore  Agent.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: backend-dev.md  infra-dev.md  reviewer.md  (+2 more)
infra/: .gitignore  app.py  pyproject.toml
infra/stacks/: __init__.py  auth_stack.py  compute_stack.py  constants.py  database_stack.py  frontend_stack.py  storage_stack.py
infra/tests/: conftest.py  test_auth_stack.py  test_compute_stack.py  test_database_stack.py  test_storage_stack.py
services/batch-poller/: pyproject.toml
services/exam-api/: Dockerfile  alembic.ini  docker-compose.localstack.yml  localstack-up.sh  pyproject.toml
services/exam-api/alembic/: env.py
services/exam-api/alembic/versions/: 001_initial_schema.py
services/exam-api/docker/debug/: docker-compose.localstack.yml  down.sh  run.sh
services/exam-api/docker/robot/: docker-compose.localstack.yml
services/exam-api/docs/: api.http  audit-async-migration.md  exam-config-upload.md  localstack.md
services/exam-api/exam_api/: cognito_group_names.py  main.py
services/exam-api/exam_api/api/: auth_router.py  config_router.py  dependencies.py  exam_router.py  http_error_handlers.py  invite_router.py  student_router.py
services/exam-api/exam_api/application/: add_students.py  change_student_password.py  confirm_exam_config.py  create_exam.py  get_exam_config_upload_urls.py  get_exam_detail.py  invite_student.py  list_exam_student_statuses.py  list_exam_students.py  list_teacher_exams.py  login_student.py  login_teacher.py  register_teacher.py  verify_exam_ownership.py
services/exam-api/exam_api/composition/: __init__.py  postgres_wiring.py  rls_sessions.py
services/exam-api/exam_api/domain/: __init__.py  assignment.py  errors.py  student.py  teacher.py
services/exam-api/exam_api/infrastructure/: aws_client_config.py  cognito_auth_adapter.py  cognito_jwt_verifier.py  db.py  dynamodb_exam_config_repository.py  dynamodb_exam_creation_repository.py  dynamodb_exam_detail_repository.py  dynamodb_exam_ownership_repository.py  dynamodb_invite_repository.py  dynamodb_student_enrollment_repository.py  dynamodb_utils.py  orm.py  postgres_assignment_repository.py  postgres_exam_detail_repository.py  postgres_student_enrollment_repository.py  postgres_teacher_repository.py  postgres_user_identity_repository.py  s3_exam_config_storage.py  student_invite_adapter.py
services/exam-api/exam_api/ports/: __init__.py  auth_service_port.py  exam_config_repository_port.py  exam_config_storage_port.py  exam_creation_repository_port.py  exam_detail_repository_port.py  exam_ownership_port.py  jwt_verifier_port.py  student_enrollment_repository_port.py  student_invite_port.py  student_scope_repository_port.py  user_identity_repository_port.py
services/exam-api/localstack/init/: 10-bootstrap.sh
services/exam-api/tests/: test_add_students.py  test_async_migration.py  test_auth.py  test_cognito_jwt_verifier.py  test_create_exam.py  test_dynamodb_invite_repository.py  test_exam_config.py  test_exam_detail.py  test_invite_student.py  test_postgres_assignment_repository.py  test_postgres_exam_detail_repository.py  test_postgres_student_enrollment_repository.py  test_postgres_teacher_repository.py  test_postgres_user_identity_repository.py  test_rbac_dependencies.py  test_student_auth.py
services/exam-api/tests/robot/: exam_api_ci.robot  run-tests.sh
services/pdf-generator/: pyproject.toml
services/spreadsheet-converter/: pyproject.toml
shared/: pyproject.toml
(+12 files in other folders)
