[project]
name = "grading-cloud"
version = "0.1.0"
description = "Cloud-native grading pipeline monorepo."
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["shared", "services/*"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["services/exam-api/tests"]
