[project]
name = "grading-cloud"
version = "0.1.0"
description = "Cloud-native grading pipeline monorepo."
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["shared", "services/*", "infra"]

[tool.uv.sources]
exam-api = { workspace = true }
grading-infra = { workspace = true }

[dependency-groups]
dev = [
    "exam-api",
    "grading-infra",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
# Two `tests/` packages (exam-api + infra): avoid `tests.*` import clashes.
addopts = "--import-mode=importlib"
testpaths = ["services/exam-api/tests", "infra/tests"]
