[project]
name = "grading-infra"
version = "0.1.0"
description = "AWS CDK infrastructure package for grading-cloud."
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.200.0",
    "constructs>=10.0.0,<11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "exam-api",
]

[tool.uv.sources]
exam-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stacks"]
