[project]
name = "spreadsheet-converter"
version = "0.1.0"
description = "Lambda service converting spreadsheets to structured JSON."
requires-python = ">=3.12"
dependencies = ["grading_shared"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
grading_shared = { workspace = true }
